force-app/main/default/objects/PBS_AAAP_Offer_History__c/PBS_AAAP_Offer_History__c.object-meta.xml
<CustomObject>
    <label>Offer History</label>
    <nameField>
        <displayFormat>OH-{0000000}</displayFormat>
        <label>Offer History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offer History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>