force-app/main/default/objects/PBS_AAAP_Offer_History__c/fields/PBS_AAAP_Agency_Requirement__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Agency_Requirement__c</fullName>
    <label>Agency Requirement</label>
    <referenceTo>PBS_AAAP_Agency_Requirement__c</referenceTo>
    <relationshipLabel>Offer History</relationshipLabel>
    <relationshipName>Offer_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>