force-app/main/default/objects/PBS_AAAP_Offer_History__c/fields/PBS_AAAP_Cloned_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Cloned_Date_Time__c</fullName>
    <label>Cloned Date/Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>