force-app/main/default/objects/PBS_AAAP_Offer_History__c/fields/PBS_AAAP_Offer_Ids__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Offer_Ids__c</fullName>
    <label>Offer Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>